now ignoring extra files generated by index and glossary generation

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,23 @@
+*.acn
+*.acr
+*.alg
 *.aux
 *.bbl
 *.blg
 *.fdb_latexmk
 *.fls
-*.log
+*.glg
+*.glo
+*.gls
+*.glsdefs
+*.idx
+*.ilg
+*.ind
+*.ist
 *.lof
+*.log
 *.lot
 *.out
-*.toc
 *-view.pdf
+*.toc
 .last_compile
